{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 286,
  "lineage": "ce47f2a2-c264-bd97-aeb6-b76a6b55a108",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "individual",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-to-active-directory",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-0820057a72076f4d5",
            "description": "ec2-to-active-directory",
            "filter": null,
            "id": "sg-0820057a72076f4d5",
            "name": "ec2-to-active-directory",
            "region": "il-central-1",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "ec2-to-rds",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-0164063268070af62",
            "description": "ec2-to-rds",
            "filter": null,
            "id": "sg-0164063268070af62",
            "name": "ec2-to-rds",
            "region": "il-central-1",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "ec2-to-tgw",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-0c8743b3dbb22abec",
            "description": "ec2-to-tgw",
            "filter": null,
            "id": "sg-0c8743b3dbb22abec",
            "name": "ec2-to-tgw",
            "region": "il-central-1",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "ssm-to-ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-06c52bfe28d2335eb",
            "description": "ssm-to-ec2",
            "filter": null,
            "id": "sg-06c52bfe28d2335eb",
            "name": "ssm-to-ec2",
            "region": "il-central-1",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:il-central-1:718311990361:transit-gateway-attachment/tgw-attach-0cde95606c81a619e",
            "dns_support": "enable",
            "id": "tgw-attach-0cde95606c81a619e",
            "ipv6_support": "disable",
            "region": "il-central-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-04ca96748f29bf1ef",
              "subnet-0768cd094eee22ee8"
            ],
            "tags": {
              "Environment": "Prod"
            },
            "tags_all": {
              "Environment": "Prod"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0430826c231550bf5",
            "vpc_id": "vpc-034404c522773cf0d",
            "vpc_owner_id": "718311990361"
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "manta-prod-app",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a313bf8989d15b9c",
            "arn": "arn:aws:ec2:il-central-1:718311990361:instance/i-0625e00ea2125f064",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076912944c6a0f31f",
                "volume_size": 150,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-0625e00ea2125f064",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r6i.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08e694d0590b04cef"
              }
            ],
            "primary_network_interface_id": "eni-08e694d0590b04cef",
            "private_dns": "ip-10-114-1-190.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.114.1.190",
            "region": "il-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0014c45e2ccc7eadb",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ca96748f29bf1ef",
            "tags": {
              "Name": "manta-prod-app"
            },
            "tags_all": {
              "Name": "manta-prod-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c52bfe28d2335eb",
              "sg-0820057a72076f4d5",
              "sg-0c8743b3dbb22abec"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ssm_role",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_security_group.individual"
          ]
        },
        {
          "index_key": "manta-prod-integration",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a313bf8989d15b9c",
            "arn": "arn:aws:ec2:il-central-1:718311990361:instance/i-0ea8dbd05c5441a87",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-006491c17353c85f3",
                "volume_size": 150,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-0ea8dbd05c5441a87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-077f9c5f246d847dc"
              }
            ],
            "primary_network_interface_id": "eni-077f9c5f246d847dc",
            "private_dns": "ip-10-114-1-179.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.114.1.179",
            "region": "il-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e4439ccdd87a0980",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ca96748f29bf1ef",
            "tags": {
              "Name": "manta-prod-integration"
            },
            "tags_all": {
              "Name": "manta-prod-integration"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c52bfe28d2335eb",
              "sg-0820057a72076f4d5",
              "sg-0c8743b3dbb22abec"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ssm_role",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_security_group.individual"
          ]
        },
        {
          "index_key": "manta-prod-reports",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a313bf8989d15b9c",
            "arn": "arn:aws:ec2:il-central-1:718311990361:instance/i-08f853cbe77e00d20",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdc",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-055341ff885229a91",
                "volume_size": 150,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-08f853cbe77e00d20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0896a15bac15ce350"
              }
            ],
            "primary_network_interface_id": "eni-0896a15bac15ce350",
            "private_dns": "ip-10-114-1-44.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.114.1.44",
            "region": "il-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-045ebf10f2663950b",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ca96748f29bf1ef",
            "tags": {
              "Name": "manta-prod-reports"
            },
            "tags_all": {
              "Name": "manta-prod-reports"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c52bfe28d2335eb",
              "sg-0820057a72076f4d5",
              "sg-0c8743b3dbb22abec"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ssm_role",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_security_group.individual"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:route-table/rtb-04fea7d4904473934",
            "id": "rtb-04fea7d4904473934",
            "owner_id": "718311990361",
            "propagating_vgws": [],
            "region": "il-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0430826c231550bf5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-manta-prod-private"
            },
            "tags_all": {
              "Name": "rtb-manta-prod-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway_vpc_attachment.tgw-attachment",
            "aws_eip.nat_eip",
            "aws_nat_gateway.main",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:route-table/rtb-0bf760a004b97f904",
            "id": "rtb-0bf760a004b97f904",
            "owner_id": "718311990361",
            "propagating_vgws": [],
            "region": "il-central-1",
            "route": [],
            "tags": {
              "Name": "rtb-manta-prod-public"
            },
            "tags_all": {
              "Name": "rtb-manta-prod-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_private_names_az",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e528f4e20957518",
            "region": "il-central-1",
            "route_table_id": "rtb-04fea7d4904473934",
            "subnet_id": "subnet-04ca96748f29bf1ef"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_vpc_attachment.tgw-attachment",
            "aws_eip.nat_eip",
            "aws_nat_gateway.main",
            "aws_route_table.rtb_private_subnet",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_public_names_az",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c8eb43261b0d1f6",
            "region": "il-central-1",
            "route_table_id": "rtb-0bf760a004b97f904",
            "subnet_id": "subnet-0c2774f77a339ec56"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public_subnet",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e43919cc2b5c7b2",
            "region": "il-central-1",
            "route_table_id": "rtb-0bf760a004b97f904",
            "subnet_id": "subnet-0eadedaea954ce57e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public_subnet",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cf_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-04a64ec7024d296cc",
            "description": "Allow traffic from CloudFront Managed Prefix List",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a64ec7024d296cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-0dd89524416301988"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cf-to-alb",
            "name_prefix": "",
            "owner_id": "718311990361",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.aws_ec2_managed_prefix_list.cloudfront"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudfront_to_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-0e6d33154ac65841b",
            "description": "Allow traffic from CloudFront Managed Prefix List",
            "egress": [],
            "id": "sg-0e6d33154ac65841b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-0dd89524416301988"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudfront-to-ec2",
            "name_prefix": "",
            "owner_id": "718311990361",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.aws_ec2_managed_prefix_list.cloudfront"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-to-active-directory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-0820057a72076f4d5",
            "description": "ec2-to-active-directory",
            "egress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.110.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0820057a72076f4d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-to-active-directory",
            "name_prefix": "",
            "owner_id": "718311990361",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-to-tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-0c8743b3dbb22abec",
            "description": "ec2-to-tgw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8743b3dbb22abec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ec2-to-tgw",
            "name_prefix": "",
            "owner_id": "718311990361",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-0164063268070af62",
            "description": "ec2-to-rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0164063268070af62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-to-rds",
            "name_prefix": "",
            "owner_id": "718311990361",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:security-group/sg-06c52bfe28d2335eb",
            "description": "ssm-to-ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "10.114.0.0/19"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c52bfe28d2335eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.114.0.0/19"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssm-to-ec2",
            "name_prefix": "",
            "owner_id": "718311990361",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:subnet/subnet-04ca96748f29bf1ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.114.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ca96748f29bf1ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718311990361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-manta-prod-private-az1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-manta-prod-private-az1"
            },
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:subnet/subnet-0768cd094eee22ee8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.114.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0768cd094eee22ee8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718311990361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-manta-prod-private-az2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-manta-prod-private-az2"
            },
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:subnet/subnet-0c2774f77a339ec56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.114.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2774f77a339ec56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718311990361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "subnet-manta-prod-public-az1"
            },
            "tags_all": {
              "Name": "subnet-manta-prod-public-az1"
            },
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:subnet/subnet-0eadedaea954ce57e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.114.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eadedaea954ce57e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718311990361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "subnet-manta-prod-public-az2"
            },
            "tags_all": {
              "Name": "subnet-manta-prod-public-az2"
            },
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:subnet/subnet-0778023318e652943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.114.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0778023318e652943",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718311990361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-manta-prod-rds-az1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-manta-prod-rds-az1"
            },
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:subnet/subnet-0a6dbb5e03cf6280e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.114.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6dbb5e03cf6280e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718311990361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Environment": "Test",
              "Name": "subnet-manta-prod-rds-az2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "subnet-manta-prod-rds-az2"
            },
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:vpc/vpc-034404c522773cf0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.114.0.0/19",
            "default_network_acl_id": "acl-0aeff682106e5391e",
            "default_route_table_id": "rtb-05e99a1df9ccda830",
            "default_security_group_id": "sg-0ee430b3ae7de1f94",
            "dhcp_options_id": "dopt-0ef4a557758816a84",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034404c522773cf0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e99a1df9ccda830",
            "owner_id": "718311990361",
            "region": "il-central-1",
            "tags": {
              "Name": "vpc-manta-prod"
            },
            "tags_all": {
              "Name": "vpc-manta-prod"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:vpc-endpoint/vpce-0092d188aab2cbbd7",
            "dns_entry": [
              {
                "dns_name": "vpce-0092d188aab2cbbd7-a134cmtj.ssm.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-0092d188aab2cbbd7-a134cmtj-il-central-1a.ssm.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-0092d188aab2cbbd7-a134cmtj-il-central-1b.ssm.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "ssm.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z08516621BTJBNDBEX2BN"
              },
              {
                "dns_name": "ssm.il-central-1.api.aws",
                "hosted_zone_id": "Z08516612BIABMX6EETFO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0092d188aab2cbbd7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0813c0728dff02212",
              "eni-0ac081d6f97d474b1"
            ],
            "owner_id": "718311990361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "il-central-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c52bfe28d2335eb"
            ],
            "service_name": "com.amazonaws.il-central-1.ssm",
            "service_region": "il-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.114.1.19",
                "subnet_id": "subnet-04ca96748f29bf1ef"
              },
              {
                "ipv4": "10.114.2.100",
                "subnet_id": "subnet-0768cd094eee22ee8"
              }
            ],
            "subnet_ids": [
              "subnet-04ca96748f29bf1ef",
              "subnet-0768cd094eee22ee8"
            ],
            "tags": {
              "Name": "SSM Endpoint - ssm"
            },
            "tags_all": {
              "Name": "SSM Endpoint - ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "dependencies": [
            "aws_security_group.ssm-to-ec2",
            "aws_subnet.private_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:vpc-endpoint/vpce-013b034edd9b97831",
            "dns_entry": [
              {
                "dns_name": "vpce-013b034edd9b97831-9dxleysq.ssmmessages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-013b034edd9b97831-9dxleysq-il-central-1b.ssmmessages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-013b034edd9b97831-9dxleysq-il-central-1a.ssmmessages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "ssmmessages.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z007514111VICSO1IXMA3"
              },
              {
                "dns_name": "ssmmessages.il-central-1.api.aws",
                "hosted_zone_id": "Z08494859T609GY2EOQA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-013b034edd9b97831",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-071a6f1c90c1fbbfb",
              "eni-08efe9a701294c4ed"
            ],
            "owner_id": "718311990361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "il-central-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c52bfe28d2335eb"
            ],
            "service_name": "com.amazonaws.il-central-1.ssmmessages",
            "service_region": "il-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.114.1.91",
                "subnet_id": "subnet-04ca96748f29bf1ef"
              },
              {
                "ipv4": "10.114.2.129",
                "subnet_id": "subnet-0768cd094eee22ee8"
              }
            ],
            "subnet_ids": [
              "subnet-04ca96748f29bf1ef",
              "subnet-0768cd094eee22ee8"
            ],
            "tags": {
              "Name": "SSM Endpoint - ssmmessages"
            },
            "tags_all": {
              "Name": "SSM Endpoint - ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "dependencies": [
            "aws_security_group.ssm-to-ec2",
            "aws_subnet.private_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:718311990361:vpc-endpoint/vpce-0797ab361d60427af",
            "dns_entry": [
              {
                "dns_name": "vpce-0797ab361d60427af-8z9g0hbr.ec2messages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-0797ab361d60427af-8z9g0hbr-il-central-1a.ec2messages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-0797ab361d60427af-8z9g0hbr-il-central-1b.ec2messages.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "ec2messages.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z00755542J7RZNHQ22I3X"
              },
              {
                "dns_name": "ec2messages.il-central-1.api.aws",
                "hosted_zone_id": "Z08490793F4P5NBY3L6VW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0797ab361d60427af",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00326a8f7922c282a",
              "eni-012a1ed7052d19586"
            ],
            "owner_id": "718311990361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "il-central-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c52bfe28d2335eb"
            ],
            "service_name": "com.amazonaws.il-central-1.ec2messages",
            "service_region": "il-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.114.1.244",
                "subnet_id": "subnet-04ca96748f29bf1ef"
              },
              {
                "ipv4": "10.114.2.169",
                "subnet_id": "subnet-0768cd094eee22ee8"
              }
            ],
            "subnet_ids": [
              "subnet-04ca96748f29bf1ef",
              "subnet-0768cd094eee22ee8"
            ],
            "tags": {
              "Name": "SSM Endpoint - ec2messages"
            },
            "tags_all": {
              "Name": "SSM Endpoint - ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034404c522773cf0d"
          },
          "dependencies": [
            "aws_security_group.ssm-to-ec2",
            "aws_subnet.private_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}